【代码优化】：统一内核名称，与应用一致

--- a/samples/kernel/Kbuild
+++ b/samples/kernel/Kbuild
@@ -1,9 +1,9 @@
-obj-$(CONFIG_TASK_DELAY) := example_task_delay.o
-obj-$(CONFIG_TASK_STOP) := example_task_stop.o
-obj-$(CONFIG_TASK_SUSPEND) := example_task_suspend.o
-obj-$(CONFIG_TASK_AFFINITY) := example_task_affinity.o
-obj-$(CONFIG_TIMER_EXAMPLE) := example_timer.o
-obj-$(CONFIG_MSGQ_EXAMPLE) := example_msgq.o
-obj-$(CONFIG_MUTEX_EXAMPLE) := example_mutex.o
-obj-$(CONFIG_SEM_EXAMPLE) := example_sem.o
-obj-$(CONFIG_RPMSG_EXAMPLE) := example_rpmsg.o
+obj-$(CONFIG_SAMPLE_TASK_DELAY) := sample_task_delay.o
+obj-$(CONFIG_SAMPLE_TASK_STOP) := sample_task_stop.o
+obj-$(CONFIG_SAMPLE_TASK_SUSPEND) := sample_task_suspend.o
+obj-$(CONFIG_SAMPLE_TASK_AFFINITY) := sample_task_affinity.o
+obj-$(CONFIG_SAMPLE_TIMER) := sample_timer.o
+obj-$(CONFIG_SAMPLE_MSGQ) := sample_msgq.o
+obj-$(CONFIG_SAMPLE_MUTEX) := sample_mutex.o
+obj-$(CONFIG_SAMPLE_SEM) := sample_sem.o
+obj-$(CONFIG_SAMPLE_RPMSG) := sample_rpmsg.o
