【DEBUG】：解决静态分析日志输出路径不存在问题,以及修复默认错误配置

--- a/config/arm64_qemu_defconfig
+++ b/config/arm64_qemu_defconfig
@@ -6,15 +6,23 @@ CONFIG_4K_PAGE_SIZE=y
 CONFIG_CPUS_MAX_NUM=2
 CONFIG_GIC_V2=y
 CONFIG_SMP=y
-CONFIG_USER_SPACE=y
 CONFIG_PAGE_TABLE_MAX_NUM=16
 CONFIG_MEM_PARTITION_MAX_NUM=32
 CONFIG_TICKS_PER_SECOND=4000
 CONFIG_KERNEL_STACK_SIZE=8192
+CONFIG_INTERRUPT_STACK_SIZE=8192
 CONFIG_MSGQ_MAX_NUM=10
 CONFIG_MSGQ_MAX_SIZE=128
-CONFIG_INTERRUPT_STACK_SIZE=8192
+CONFIG_KERNEL_HEAP_SIZE=1048576
+CONFIG_USER_SPACE=y
+CONFIG_USER_HEAP_SIZE=1048576
+CONFIG_LIBC_STRING=y
+CONFIG_LIBC_STD=y
+CONFIG_LIBC_SCHED=y
+CONFIG_LIBC_THREAD=y
+CONFIG_LIBC_SEM_VALUE_MAX=32
 CONFIG_RPMSG=y
+CONFIG_RPMSG_KERNEL_USE=y
 CONFIG_SHELL=y
 CONFIG_SHELL_CMD_BUFFER_SIZE=128
 CONFIG_SHELL_CMD_SPACE_SIZE=128
@@ -28,4 +36,4 @@ CONFIG_SHELL_UART_TIMER_INTERVAL=10
 CONFIG_SHELL_HISTORY_BUFFER_SIZE=1024
 CONFIG_SHELL_PRINTF_BUFF_SIZE=125
 CONFIG_SHELL_UART_POLL_TYPE=y
-CONFIG_USER_TASK_001=y
+CONFIG_SAMPLE_USER_TASK=y
