--- a/lib/libc/thread/Kbuild
+++ b/lib/libc/thread/Kbuild
@@ -11,5 +11,6 @@ obj-$(CONFIG_LIBC_THREAD) := \
 	sem_wait.o \
 	pthread_attr_setstack.o \
 	pthread_attr_get.o \
-	pthread_attr_setstacksize.o
+	pthread_attr_setstacksize.o \
+	pthread_attr_setguardsize.o
 	
