【新功能】：增加pthread的调度设置与获取

--- a/lib/libc/thread/Kbuild
+++ b/lib/libc/thread/Kbuild
@@ -12,5 +12,6 @@ obj-$(CONFIG_LIBC_THREAD) := \
 	pthread_attr_setstack.o \
 	pthread_attr_get.o \
 	pthread_attr_setstacksize.o \
-	pthread_attr_setguardsize.o
+	pthread_attr_setguardsize.o \
+	pthread_attr_setschedparam.o
 	
