【新功能】：增加pthread属性调度获取与设置

--- a/lib/libc/thread/Kbuild
+++ b/lib/libc/thread/Kbuild
@@ -13,5 +13,6 @@ obj-$(CONFIG_LIBC_THREAD) := \
 	pthread_attr_get.o \
 	pthread_attr_setstacksize.o \
 	pthread_attr_setguardsize.o \
-	pthread_attr_setschedparam.o
+	pthread_attr_setschedparam.o \
+	pthread_attr_setschedpolicy.o
 	
